Imports Ges version changes to main urge10.tex document

--- a/escrito/urge10.tex
+++ b/escrito/urge10.tex
@@ -70,7 +70,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper underscores a procedural distinction of this institution that scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. We provide significant evidence that urgency use associates with the type of restrictive rule correlates found in the United States.
+\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast track authority is not to speed legislation, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast track authority is similar to a "closed rule". Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period.
 \end{abstract}
 
 % comentarios de Calvo
@@ -85,6 +85,7 @@
 
 % Adriana Alfaro
 % En Chile se llama urgencia, en Mx iniciativa preferente. Cómo se llama en Colombia etc? La lectura semántica quizás sesgó la interpretación de Morgenstern y cia.
+
 % R: No parece ser el caso, sólo en México no lleva el mote de 'urgente'.
 %    Colombia = manifestación de urgencia
 %    México   = iniciativa preferente
@@ -112,6 +113,7 @@
 %% Por último, algunas posibles extensiones que tal vez sea mejor discutir en otros trabajos, pero podrían mencionar en la conclusión:
 %
 %% 5. No me quedó clara la diferencia entre poder de urgencia y poderes de decreto, especialmente cuando hay aprobación automática (e.g., Uruguay). Pero si el presidente puede legislar por decreto, ¿el pleno no tiene que elegir entre el decreto tal como está, o introducirle algo? O sea, ¿el decreto no funciona también como una closed rule? No lo digo por el caso chileno, pero sí para pensar cómo comparar con otros países.
+%R (gisela); el decreto es mas fuerte que todo lo que conocemos.  Hasta el fast track authority the Howell y Moe tiene que ser aprobado por el Congreso, pero en Argentina por ejmeplo, los decretos no estan reglamentados y no necesitan ser aprobados por el congreso.  Otra cosa: la gran diferencia seria si los decretos se analizan en comision o no.  En Chile, la comision puede introducir todos los cambios que quiere (y creo que es asi en Brazil, no?) . No se si es asi en Argentina. Este close rule en Chile defiende el bill de amendments no negociadas con el presidente de la comision (que pueden venir de facciones del partido/coalicion gobernante, o de la oposicion).
 %
 %% 6. ¿El modelo genera algún otro tipo de predicciones? Ustedes están mirando declaración de urgencia, ¿pero es posible predecir qué proyectos deberían morir en el comité, cuáles deberían ser aprobados por el pleno, cuáles recibir enmiendas, etc? Si no es posible predecirlo (o no tienen los datos para evaluar las predicciones), deberían explicar por qué en el paper. Se me hace que muchos reviewers les van a salir con eso.
 %
@@ -120,11 +122,12 @@
 
 
 % Otros comentarios de la charla en el itam
-% 1. Jeff: In US, committee reports original bill and amendments separately, each voted. In Mexico, committee reports its own version. Is it the same in Chile? EMM: Yes, methinks. FEE: Look at original executive proposals and what the committee reports, to see how much change there was.
+% 1. Jeff: In US, committee reports original bill and amendments separately, each voted. 	NOT TRUE: REPORTS A BILL DEPENDING ON HOW WAS THE FINAL OUTCOME WITH THE VOTES ON THE AMENDMENTS. IN THE RPORT OF COURSE IT MAKES A SUMMARY OF THE DENATE, THE AMENDMENTS, THE VOTING, WHO OTED FOR WHAT, ETC.  VERY SIMILAR TO CHILE. In Mexico, committee reports its own version. Is it the same in Chile? EMM: Yes, methinks. FEE: Look at original executive proposals and what the committee reports, to see how much change there was. GS: HAHA THAT'S A LOT, LOT OF WORK 
 %
-% 2. FEE/Adrián: analize exv bills urgent since the beginning vs those declared urgent later. Should hint at how restrictive rules become necessary as exv makes concessions in original bill...
+% 2. FEE/Adrián: analize exv bills urgent since the beginning vs those declared urgent later. Should hint at how restrictive rules become necessary as exv makes concessions in original bill... 
+% GS: WHAT DO YOU THINK ABOUT THIS? NOT SURE HOW IT WOULD MATTER, BUT NOT IN THAT WAY. THE RESTRICTION DOE SNOT COUNT FOR COMMITTEES. BUT THE DIFFERENCE SHOULD BE INTERESTING: WHY SOME HAVE URGENCY SINCE THE BEGGINNING? I IMAGINE IT HAS TO DO WITH A SIGNAL FROM THE EXECUTIVE: THE BILL IS IMPORTANT, AND I AM WILLING TO SHIELDED FORM AMENDMENTS IN THE FLOOR IF YOUDO NOT MODIFY IT MUCH. OR MAYBE SOMETHING LIKE: THIS IS IMPORTANT TO ME, I'M WILLING TO NEGOTIATE
 %
-% 3. Vidal: discuss why the institution is so much used and has survived so long. Also: why aren't all exv bills urgent? (R: if comm introduced changes, P may want floor to ``correct'' them.
+% 3. Vidal: discuss why the institution is so much used and has survived so long. Also: why aren't all exv bills urgent? (R: if comm introduced changes, P may want floor to ``correct'' them. 
 %
 % 4. FEE: Senate, where opp sometimes controlled, seem more attractive test. 
 %
@@ -133,14 +136,13 @@
 % 6. Adrián: recode para que en caso de multiple referral, coalChair=1 sólo si todos son de coalición.
 %
 % 7. Multiple referrals: simultáneos o secuenciales? Cómo opera el gatekeeping?
+% GS: ACCORDING TO SOTO, SE PUEDEN MANDAR PROYECTOS A UNA O MAS COMISIONES, QUE PUEDEN ACTUAR SEPARADAS O UNIDAS. , O TAMBIEN PUEDE ENCONMENDARSE A UNA COMISION ESPECIAL.  (TODO ESTO ES DEICISION DEL PRESIDENTE DE LA CAMARA)  SI SON SEPARADAS,  PUEDE HABER UNA COMISION PRIMARIA, QUE SI APRUEBA EL PROYECTO ENTONCES SE TRATA EN EL PLENARIO. SI LA COMISION SECUNDARIA NO APRUEBA ELPROYECTO, IGUAL PUEDE IR AL PLENO.  PERO TAMBIEN SE PUEDE ENVIAR UN PROYECTO A COMISIONES UNIDAS: ESTO ES, LAS COMISIONES TIENEN QUE REUNIRSE JUNTAS Y TRATAR EL PROYECTO DE LEY . CON ESTO ULTIMO BASICAMENTE SE MATA EL PROYECTO.
 % 
 % 8. Simpser: policy area descriptives, need to show that result is not this rather than committee chair. Check speed controllingthis, too.
 %
 % 9. FEE: cotejar la propuesta original vs el reporte primero, para evaluar la discreción del committee chair. También, contar historia de uno o dos bills como ejemplo de perro que ladra/no. 
 %
 % 10. FEE. Controlar margen de victoria en el pleno.
-
-
 
 %% DE VALERIA
 
@@ -188,11 +190,11 @@
 
 \section{Introduction}
 
-\noindent The prerogative to declare bills urgent gives the president power to interfere with congress' voting schedule. Presidents with such power can impose legislators with a deadline to discuss and vote legislation by simply designating a bill ``urgent''. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
-
-\ges{Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
-    The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
-    Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.}
+Fast track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by simply designating a bill ``urgent'' Presidents  can impose legislators with a deadline to discuss and vote legislation. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
+\ges{here we need to make a footnote on the US, that in the US that doe snot apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations.
+Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
+The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.}
 \emm{La ventaja de 47 es que enfatiza la separación de poderes. La ventaja de 70 es que subraya la aceleración del proceso, que es lo que la literatura (y el término urgencia) han considerado. Quizás econtremos una intersección de ambas ideas...}
 
 % federalist 70
@@ -201,6 +203,7 @@
 
 Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
+\ges{Soto dice que Ecuador, Paraguay y Dominicana tienen poderes de urgencia tambien, y ita Base de Datos Politicos de las Americas (2008) de Georgetown University.}
 \emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check.}
 \vp{WILL LOOK INTO THIS}
 \ges{Little, if any connection.}
@@ -333,7 +336,7 @@ We use the example to stylize the evolution of legislative proposals, from intro
 \item The \textbf{second reading} proceeds one article at a time (\emph{discusión particular}). Importantly, this excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting article 1's amendment makes the project lose sub-index 1; likewise with article 2. So when $p_{12}$ is the second report, the plenary can accept one amendment, the other, both, or neither---as in the bottom row of Figure \ref{f:agendaUrg}. 
 \end{enumerate}
 
-We underline how the process shortens and becomes simpler when the proposal is urgent. This is a key intuition from \citet{sotoCongChile2015}: when the executive issues an urgency message, \emph{the bill takes a procedural shortcut}. As per the Lower Chamber's standing rules (arts.~188--9), urgent bills receive no second committee report, and the first and second plenary readings (\emph{discusiones general y particular} take place at once.\footnote{An additional caveat, which we do not elaborate, is that amendments rejected by the committee will only be admitted for plenary reading if signed by thirty deputies, including at least three committee chairs.} 
+We underline how the process shortens and becomes simpler when the proposal is urgent. This is a key intuition from \citet{sotoCongChile2015}: when the executive issues an urgency message, \emph{the bill takes a procedural shortcut}. As per the Lower Chamber's standing rules (arts.~188--9), urgent bills receive no second committee report, and the first and second plenary readings (\emph{discusiones general y particular}) take place at once.\footnote{An additional caveat, which we do not elaborate, is that amendments rejected by the committee will only be admitted for plenary reading if signed by thirty deputies, including at least three committee chairs.} 
 
 Urgency authority therefore equips the executive with the ability to apply a restrictive rule towards plenary consideration. The restriction consists of precluding the second round of amendments. Figure \ref{f:agendaUrg} portrays this as a break mid-way in the consideration process. With urgent consideration, when the presiding officer admits $p_1$ the plenary's choice set includes $q$, $p$, and $p_1$ only. At its most restrictive---when the presiding officer removes $p_1$ from the menu---the plenary is presented with a take-it-or-leave-it urgent proposal $p$.
 
@@ -387,7 +390,7 @@ We stylize the Chilean urgency authority as a game of restrictive procedures ins
 
 The main features of this game are as follows. Unless there is unanimous support to suspend the chamber's rules, every proposal requires a committee report prior to floor consideration (Organic Law, art.~21). The committee with jurisdiction over a given proposal starts the game, choosing whether or not to report the bill to the floor. No explicit discharge procedure exists in Chile. This confers gate-keeping power to committees over policy in their jurisdiction: when the committee withholds a report, the game ends with policy at the status quo $q$. Chilean committees are no different in this respect from those in the U.S.\ Congress. If a report is produced, the committee can approve the proposal in whole or in part, amend it, make additions, or reject it (Cámara standing rule 287.8). We interpret this as (positive) agenda power to locate the proposal in policy space: $x_C \in [0,1]$. The president moves next. 
 
-The president's choice set has three alternatives: let the bill proceed under standard floor consideration; declare it urgent; or issue a veto. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, amendments reshape the bill to the floor's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. The next alternative, urgency, invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citep{romer.rosenthal.1978}. The final presidential alternative, the veto, may end the game at the status quo---the formal equivalent of the rule denial in Dion and Huber's procedural stage.
+The president's choice set has three alternatives: let the bill proceed under standard floor consideration; declare it urgent; or issue a veto. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, amendments reshape the bill to the floor's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. The next alternative, urgency, invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citet{romer.rosenthal.1978}. The final presidential alternative, the veto, may end the game at the status quo---the formal equivalent of the rule denial in Dion and Huber's procedural stage.
 
 \vp{But this [open rule] returns the bill to the committee, no?}
 \emm{It does, but only id amendments were in fact introduced. Model totally ignores this. Simplistic? Justifiable? May need some elaboration.}
