--- a/gesValeriaEric/paper/urge10.tex
+++ b/gesValeriaEric/paper/urge10.tex
@@ -28,7 +28,7 @@
 
 \newcommand{\mc}{\multicolumn}
 
-%% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISBALED
+%% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISABLED
 %\usepackage[disable]{todonotes}                            % notes not showed
 \usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
 \newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{Eric:} #1}}
@@ -57,7 +57,9 @@
 
 \begin{document}
 
-\title{President's Fast Track Authority: In Chile, Not Too Fast, but a Shield Against Amendments\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign.  The authors are responsible for mistakes and shortcomings in the study.}}
+% Restrictive rules in the Chilean Cámara: Fighting floor amendments with urgency authority
+
+\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -68,7 +70,8 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast track authority is not to speed legislation, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast track authority is similar to a "close rule". Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. \end{abstract}
+\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast track authority is not to speed legislation, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast track authority is similar to a "closed rule". Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period.
+\end{abstract}
 
 % comentarios de Calvo
 %Comentarios a Magar: Presidential obstruction of the agenda in Chile’s Congress
@@ -110,7 +113,7 @@
 %% Por último, algunas posibles extensiones que tal vez sea mejor discutir en otros trabajos, pero podrían mencionar en la conclusión:
 %
 %% 5. No me quedó clara la diferencia entre poder de urgencia y poderes de decreto, especialmente cuando hay aprobación automática (e.g., Uruguay). Pero si el presidente puede legislar por decreto, ¿el pleno no tiene que elegir entre el decreto tal como está, o introducirle algo? O sea, ¿el decreto no funciona también como una closed rule? No lo digo por el caso chileno, pero sí para pensar cómo comparar con otros países.
-%R (gisela); el decreto es mas fuerte que todo lo que conocemos.  Hasta el fast track authority the Howell y Moe tiene que ser aprobado por el Congreso, pero en Argentina por ejmeplo, los decretos no estan reglamentados y no necesitan ser aprobados por el congreso.  Otra cosa: la gran diferencia seria si los decretos se analizan en comision o no.  En Chile, la comision puede introducir todos los cambios que quiere (y creo que es asi en Brazil, no?) . No se si es asi en Argentina. Este close rule en Chile defiende el bill de amendments no negociadas con el presidente de la comision (que pueden venir de facciones del partido/coalicion gobernante, o de la oposicion). 
+%R (gisela); el decreto es mas fuerte que todo lo que conocemos.  Hasta el fast track authority the Howell y Moe tiene que ser aprobado por el Congreso, pero en Argentina por ejmeplo, los decretos no estan reglamentados y no necesitan ser aprobados por el congreso.  Otra cosa: la gran diferencia seria si los decretos se analizan en comision o no.  En Chile, la comision puede introducir todos los cambios que quiere (y creo que es asi en Brazil, no?) . No se si es asi en Argentina. Este close rule en Chile defiende el bill de amendments no negociadas con el presidente de la comision (que pueden venir de facciones del partido/coalicion gobernante, o de la oposicion).
 %
 %% 6. ¿El modelo genera algún otro tipo de predicciones? Ustedes están mirando declaración de urgencia, ¿pero es posible predecir qué proyectos deberían morir en el comité, cuáles deberían ser aprobados por el pleno, cuáles recibir enmiendas, etc? Si no es posible predecirlo (o no tienen los datos para evaluar las predicciones), deberían explicar por qué en el paper. Se me hace que muchos reviewers les van a salir con eso.
 %
@@ -141,28 +144,66 @@
 %
 % 10. FEE. Controlar margen de victoria en el pleno.
 
-\onehalfspacing
+%% DE VALERIA
+
+%% (b) pedirle a un RA que haga una investigación rápida (creo recordar que el reglamento no es muy explícito) para entender la práctica de introducción de indicaciones, en general,
+
+%% No conseguí RA porque es época de exámenes, pero esto es lo que pude ver yo. Hay 55 referencias a indicaciones en el reglamento, así que esto intenta resumir lo más importante:
+%% - El reglamento de 2015 (el único sobre el cual hay claridad al momento) establece que el Presidente de la cámara puede declarar inadmisible las indicaciones (art 55.2).
+%% - Aparte, los proyectos que formen parte de la tabla de Despacho Inmediato no podrán ser objeto de indicaciones y serán sometidos a una sola votación.
+%% - En los proyectos incluidos en la tabla de Fácil Despacho las indicaciones presentadas serán tratadas una vez aprobado el proyecto en general, pero no se aceptarán indicaciones en materias de la Comisión de Hacienda, esas indicaciones serán enviadas a la Comisión de Hacienda. Las indicaciones se pueden presentar hasta el momento antes de que se vote el último artículo que se trate en particular.
+%% - Si no hay indicaciones, la aprobación en general incluye la aprobación en particular del proyecto.
+%% - Durante la discusión general el Presidente de la República y los diputados pueden introducir indicaciones.
+%% - Bastará que un comité solicite plazo para formular indicaciones para que sea otorgado, no pudiendo el plazo ser inferior a un día.
+%% - Se someterán a discusión en particular las indicaciones que, rechazadas en el segundo informe, sean renovadas por el Pdte de la República o por dos jefes de comités.
+%% - Se llama también "indicaciones" a las mociones para reabrir el debate y otras mociones.
+%% - No se admiten indicaciones que alteren gastos por parte de diputados. Sólo se admitirán si emanan del Pdte de la Rep.
+%% - Sí si disminuyen gastos.
+%% - Cuando se trate de proyectos con suma urgencia o discusión inmediata sólo serán aceptadas indicaciones rechazadas por las comisiones informantes si son respaldadas por la firma de 30 diputados que incluyan al menos a 3 jefes de comités, siempre que se trate de las que fueron presentadas en la discusión en general o dentroo del plazo fijado por la cámara.
+%% - El pdte de la cámara es quien puede declarar inadmisibles indicaciones.
+
+%% y si alguien además del presidente puede imponer closed rule---ie, prescindir de la segunda lectura---en particular. 
+
+%% Todos los proyectos incluidos en la tabla de Fácil Despacho no tienen segundo informe de comisión. Son proyectos de poca importancia. Todos los órdenes del día tienen tabla de fácil despacho. Pero la mesa que decide qué entra en esta tabla tendría esa prerrogativa, y podría "estirar" su uso. 
+
+%% Creo mencionar un una nota a pie un recurso de la biblioteca del congreso que resume bien la práctica parlamentaria. 
+
+%% No consulté esto, mi única fuente fue el Reglamento 2015. 
+
+
+%% 2. Sigue también pendiente encontrar una versión del reglamento de la cámara anterior a 2010 para verificar si la closed rule antes aplicaba sólo a la suma urgencia.
+
+%% Adjunto memo sobre reglamento 2015 que tiene, al principio, todas las enmiendas al reglamento. Después, un resumen de todo lo que se dice en el Reglamento acerca de las urgencias. Las reformas, para hacer lo mismo hacia atrás, son muchas, habría que ver cuáles nos interesan. Eric, si tienes en mente una en particular, dime cuál. Le encargaré a un RA hacer el seguimiento de los artículos que yo identifiqué en el Regla 2015 hacia atrás, pero es un trabajo tremendo así que si lo podemos acotar, mejor.
+
+%% 3. Algunas ideas para un nuevo título que aluda a Relic:
+
+%% -Presidents with fast track authority: Fighting floor amendments in the Chilean Cámara
+%% -Presidential fast track authority: More a Previous Question than a privileged motion
+%% -Not faster/Not an accelerator but a shield against plenary amendments
+%% -Not a car pool lane but a cloture of highway exits
+%% -Presidents with fast track authority cannot accelerate
+%% -Not an accelerator, a take-it-or-leave-it rule
+
+%% Estamos en contacto, le mando besos.
+
+\doublespacing
 
 \section{Introduction}
 
-\noindent Fast track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by simply designating a bill ``urgent'' Presidents  can impose legislators with a deadline to discuss and vote legislation. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
-\ges{here we need to make a footnote on the US, that in the US that doe snot apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations}
-
-
-\ges{Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
-    The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
-    Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.}
+Fast track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by simply designating a bill ``urgent'' Presidents  can impose legislators with a deadline to discuss and vote legislation. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
+\ges{here we need to make a footnote on the US, that in the US that doe snot apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations.
+Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
+The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.}
 \emm{La ventaja de 47 es que enfatiza la separación de poderes. La ventaja de 70 es que subraya la aceleración del proceso, que es lo que la literatura (y el término urgencia) han considerado. Quizás econtremos una intersección de ambas ideas...}
 
 % federalist 70
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
 % federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
 
-Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. 
-\ges{Soto dice que Ecuador, Paraguay y Dominicana tienen poderes de urgencia tambien, y ita Base de Datos Politicos de las Americas (2008) de Georgetown University.
+Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
-In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
-
+\ges{Soto dice que Ecuador, Paraguay y Dominicana tienen poderes de urgencia tambien, y ita Base de Datos Politicos de las Americas (2008) de Georgetown University.}
 \emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check.}
 \vp{WILL LOOK INTO THIS}
 \ges{Little, if any connection.}
@@ -1000,7 +1041,7 @@ El proyecto deberá ser despachado por la Cámara en tres días [...]
 \textbf{La discusión de estos proyectos se hará en general y particular a la vez. No serán sometidos a segundo informe.}})
 
 
-\onehalfspacing
+\doublespacing
 
 \emm{Urge encontrar el texto de estos artículos del reglamento antes de la reforma de 2010, para verificar la duda acerca de la discusión inmediata...}
 
